situation_api.h


typedef enum {
    SITUATION_SUCCESS                                       =   0,  
	SITUATION_ERROR_GENERAL                                	=   -1,  
    SITUATION_ERROR_NOT_IMPLEMENTED                        	=   -2,  
    SITUATION_ERROR_NOT_INITIALIZED                        	=   -3,  
    SITUATION_ERROR_ALREADY_INITIALIZED                    	=   -4,  
    SITUATION_ERROR_INIT_FAILED                            	=   -5,  
    SITUATION_ERROR_SHUTDOWN_FAILED                        	=   -6,  
    SITUATION_ERROR_INVALID_PARAM                          	=   -7,  
    SITUATION_ERROR_MEMORY_ALLOCATION                      	=   -8,  
    SITUATION_ERROR_INTERNAL_STATE_CORRUPTED               	=   -9,  
    SITUATION_ERROR_ASSERTION_FAILED                       	=  -10,  
    SITUATION_ERROR_UPDATE_AFTER_DRAW_VIOLATION            	=  -11,  
    SITUATION_ERROR_TIMER_SYSTEM                           	=  -20,  
	SITUATION_ERROR_THREAD_QUEUE_FULL  						=  -80,  
	SITUATION_ERROR_THREAD_VIOLATION   						=  -81,  
    SITUATION_ERROR_THREAD_CYCLE                            =  -82,  
    SITUATION_ERROR_THREAD_CREATION_FAILED                  =  -83,  
    SITUATION_ERROR_RENDER_BACKPRESSURE_TIMEOUT             =  -84,  
    SITUATION_ERROR_RENDER_LIST_INCOMPLETE                  =  -85,  
    SITUATION_ERROR_ARM_INTRINSICS_FAILED                   =  -86,  
	SITUATION_ERROR_COMMAND_EXECUTION_FAILED                =  -90,  
    SITUATION_ERROR_GLFW_FAILED                             = -100,  
    SITUATION_ERROR_WINDOW_CREATION_FAILED                  = -101,  
    SITUATION_ERROR_WINDOW_FOCUS_FAILED                     = -102,  
    SITUATION_ERROR_CLIPBOARD_FAILED                        = -103,  
    SITUATION_ERROR_CURSOR_CREATION_FAILED                  = -104,  
    SITUATION_ERROR_COM_INITIALIZATION_FAILED               = -110,  
    SITUATION_ERROR_DXGI_QUERY_FAILED                       = -111,  
    SITUATION_ERROR_WINDOW_FOCUS							= -120,  
    SITUATION_ERROR_DEVICE_QUERY							= -121,  
    SITUATION_ERROR_COM_FAILED								= -123,  
    SITUATION_ERROR_DXGI_FAILED								= -124,  
    SITUATION_ERROR_DISPLAY_QUERY                           = -200,  
    SITUATION_ERROR_DISPLAY_SET                             = -201,  
    SITUATION_ERROR_VIRTUAL_DISPLAY_LIMIT                   = -202,  
    SITUATION_ERROR_VIRTUAL_DISPLAY_INVALID_ID              = -203,  
    SITUATION_ERROR_DISPLAY_QUERY_FAILED                    = -210,  
    SITUATION_ERROR_DISPLAY_MODE_UNSUPPORTED                = -211,  
    SITUATION_ERROR_DISPLAY_MODE_SET_FAILED                 = -212,  
    SITUATION_ERROR_VIRTUAL_DISPLAY_LIMIT_REACHED           = -213,  
    SITUATION_ERROR_VIRTUAL_DISPLAY_NOT_FOUND               = -214,  
    SITUATION_ERROR_FILE_ACCESS                             = -300,  
    SITUATION_ERROR_PATH_NOT_FOUND                          = -301,  
    SITUATION_ERROR_PATH_INVALID                            = -302,  
    SITUATION_ERROR_PERMISSION_DENIED                       = -303,  
    SITUATION_ERROR_DISK_FULL                               = -304,  
    SITUATION_ERROR_FILE_LOCKED                             = -305,  
    SITUATION_ERROR_DIR_NOT_EMPTY                           = -306,  
    SITUATION_ERROR_FILE_ALREADY_EXISTS                     = -307,  
    SITUATION_ERROR_PATH_IS_DIRECTORY                       = -308,  
    SITUATION_ERROR_PATH_IS_FILE                            = -309,  
    SITUATION_ERROR_FILE_NOT_FOUND                          = -310,  
    SITUATION_ERROR_FILE_ACCESS_DENIED                      = -311,  
    SITUATION_ERROR_FILE_OPEN_FAILED                        = -312,  
    SITUATION_ERROR_FILE_READ_FAILED                        = -313,  
    SITUATION_ERROR_FILE_WRITE_FAILED                       = -314,  
    SITUATION_ERROR_FILE_TOO_LARGE                          = -315,  
    SITUATION_ERROR_DIRECTORY_CREATION_FAILED               = -316,  
    SITUATION_ERROR_HOTRELOAD_WATCHER_FAILED                = -320,  
    SITUATION_ERROR_HOTRELOAD_FILE_CHANGED_TOO_FAST         = -321,  
    SITUATION_ERROR_HOTRELOAD_GPU_SYNC_FAILED               = -322,  
    SITUATION_ERROR_AUDIO_CONTEXT                           = -400,  
    SITUATION_ERROR_AUDIO_DEVICE                            = -401,  
    SITUATION_ERROR_AUDIO_SOUND_LIMIT                       = -402,  
    SITUATION_ERROR_AUDIO_CONVERTER                         = -403,  
    SITUATION_ERROR_AUDIO_DECODING                          = -404,  
    SITUATION_ERROR_AUDIO_INVALID_OPERATION                 = -405,  
    SITUATION_ERROR_AUDIO_BACKEND_INIT_FAILED               = -410,  
    SITUATION_ERROR_AUDIO_DEVICE_INIT_FAILED                = -411,  
    SITUATION_ERROR_AUDIO_DEVICE_START_FAILED               = -412,  
    SITUATION_ERROR_AUDIO_DECODER_INIT_FAILED               = -413,  
    SITUATION_ERROR_AUDIO_DECODER_FORMAT_UNSUPPORTED        = -414,  
    SITUATION_ERROR_AUDIO_STREAM_ENDED                      = -415,  
    SITUATION_ERROR_AUDIO_SOUND_LIMIT_REACHED               = -420,  
    SITUATION_ERROR_AUDIO_CAPTURE_NOT_AVAILABLE             = -430,  
    SITUATION_ERROR_RESOURCE_INVALID                        = -500,  
    SITUATION_ERROR_BUFFER_INVALID_SIZE                     = -501,  
    SITUATION_ERROR_RENDER_COMMAND_FAILED                   = -502,  
    SITUATION_ERROR_RENDER_PASS_ACTIVE                      = -503,  
    SITUATION_ERROR_INVALID_RESOURCE_HANDLE                 = -510,  
    SITUATION_ERROR_RESOURCE_ALREADY_DESTROYED              = -511,  
    SITUATION_ERROR_BUFFER_MAP_FAILED                       = -512,  
    SITUATION_ERROR_BUFFER_OVERFLOW                         = -513,  
    SITUATION_ERROR_BUFFER_INVALID_USAGE                    = -514,  
    SITUATION_ERROR_TEXTURE_UPLOAD_FAILED                   = -520,  
    SITUATION_ERROR_NO_ACTIVE_COMMAND_BUFFER                = -530,  
    SITUATION_ERROR_COMMAND_BUFFER_FULL                     = -531,  
    SITUATION_ERROR_NO_RENDER_PASS_ACTIVE                   = -540,  
    SITUATION_ERROR_RENDER_PASS_ALREADY_ACTIVE              = -541,  
    SITUATION_ERROR_BACKEND_MISMATCH                        = -550,  
    SITUATION_ERROR_PIPELINE_BIND_FAIL                      = -552,  
    SITUATION_ERROR_OPENGL_GENERAL                          = -600,  
    SITUATION_ERROR_OPENGL_LOADER_FAILED                    = -601,  
    SITUATION_ERROR_OPENGL_UNSUPPORTED                      = -602,  
    SITUATION_ERROR_OPENGL_SHADER_COMPILE                   = -610,  
    SITUATION_ERROR_OPENGL_SHADER_LINK                      = -611,  
    SITUATION_ERROR_OPENGL_FBO_INCOMPLETE                   = -620,  
    SITUATION_ERROR_OPENGL_CONTEXT_CREATION_FAILED          = -630,  
    SITUATION_ERROR_OPENGL_UNSUPPORTED_VERSION              = -631,  
    SITUATION_ERROR_OPENGL_SHADER_COMPILE_FAILED            = -632,  
    SITUATION_ERROR_OPENGL_SHADER_LINK_FAILED               = -633,  
    SITUATION_ERROR_OPENGL_PROGRAM_VALIDATION_FAILED        = -634,  
    SITUATION_ERROR_OPENGL_UNIFORM_NOT_FOUND                = -635,  
    SITUATION_ERROR_VULKAN_INIT_FAILED                      = -700,  
    SITUATION_ERROR_VULKAN_INSTANCE_FAILED                  = -701,  
    SITUATION_ERROR_VULKAN_DEVICE_FAILED                    = -702,  
    SITUATION_ERROR_VULKAN_UNSUPPORTED                      = -703,  
    SITUATION_ERROR_VULKAN_SWAPCHAIN_FAILED                 = -710,  
    SITUATION_ERROR_VULKAN_COMMAND_FAILED                   = -720,  
    SITUATION_ERROR_VULKAN_RENDERPASS_FAILED                = -730,  
    SITUATION_ERROR_VULKAN_FRAMEBUFFER_FAILED               = -731,  
    SITUATION_ERROR_VULKAN_PIPELINE_FAILED                  = -732,  
    SITUATION_ERROR_VULKAN_SYNC_OBJECT_FAILED               = -733,  
    SITUATION_ERROR_VULKAN_MEMORY_ALLOC_FAILED              = -734,  
    SITUATION_ERROR_VULKAN_DESCRIPTOR_FAILED                = -735,  
    SITUATION_ERROR_VULKAN_INSTANCE_CREATION_FAILED         = -740,  
    SITUATION_ERROR_VULKAN_PHYSICAL_DEVICE_UNSUITABLE       = -741,  
    SITUATION_ERROR_VULKAN_DEVICE_CREATION_FAILED           = -742,  
    SITUATION_ERROR_VULKAN_SWAPCHAIN_CREATION_FAILED        = -743,  
    SITUATION_ERROR_VULKAN_SWAPCHAIN_INVALID                = -744,  
    SITUATION_ERROR_VULKAN_IMAGE_ACQUIRE_FAILED             = -745,  
    SITUATION_ERROR_VULKAN_QUEUE_SUBMIT_FAILED              = -746,  
    SITUATION_ERROR_VULKAN_PIPELINE_CREATION_FAILED         = -747,  
    SITUATION_ERROR_VULKAN_SHADER_MODULE_FAILED             = -748,  
    SITUATION_ERROR_VULKAN_DESCRIPTOR_POOL_EXHAUSTED        = -749,  
    SITUATION_ERROR_VULKAN_MEMORY_ALLOCATION_FAILED         = -750,  
    SITUATION_ERROR_VULKAN_VALIDATION_LAYER_ERROR           = -751,  
    SITUATION_ERROR_SHADER_COMPILATION_FAILED               = -752,  
    SITUATION_ERROR_COMPUTE_PIPELINE_CREATION_FAILED        = -800,  
    SITUATION_ERROR_COMPUTE_DISPATCH_FAILED                 = -801,  
    SITUATION_ERROR_COMPUTE_BUFFER_BINDING_MISSING          = -802,  
    SITUATION_ERROR_NETWORK_INIT_FAILED                     = -900,  
    SITUATION_ERROR_NETWORK_SOCKET_CREATION_FAILED          = -901,  
    SITUATION_ERROR_NETWORK_CONNECTION_FAILED               = -902,  
    SITUATION_ERROR_NETWORK_SEND_FAILED                     = -903,  
    SITUATION_ERROR_NETWORK_RECEIVE_FAILED                  = -904,  
    SITUATION_ERROR_NETWORK_BIND_FAILED                     = -905,  
    SITUATION_ERROR_NETWORK_LISTEN_FAILED                   = -906,  
    SITUATION_ERROR_NETWORK_ACCEPT_FAILED                   = -907,  
    SITUATION_ERROR_UNKNOWN_ERROR                           = -999,  
} SituationError;
typedef uint32_t SituationJobId;
typedef struct SituationThreadPool {
    bool is_active;
    thrd_t threads[SITUATION_MAX_THREADS];
    size_t thread_count;
    struct {
        SituationJob* jobs;
        size_t capacity;
        size_t mask;        
        atomic_size_t head; 
        atomic_size_t tail; 
        mtx_t lock;         
    } queues[2];
    cnd_t wake_condition;   
    cnd_t idle_condition;   
    thrd_t io_thread;
    atomic_bool io_active;
    double hot_reload_rate; 
    atomic_int active_jobs; 
    atomic_bool shutdown;
    char _padding[64];      
} SituationThreadPool;
typedef enum {
    SITUATION_BUFFER_USAGE_VERTEX_BUFFER     = 1 << 0,   
    SITUATION_BUFFER_USAGE_INDEX_BUFFER      = 1 << 1,   
    SITUATION_BUFFER_USAGE_UNIFORM_BUFFER    = 1 << 2,   
    SITUATION_BUFFER_USAGE_STORAGE_BUFFER    = 1 << 3,   
    SITUATION_BUFFER_USAGE_INDIRECT_BUFFER   = 1 << 4,   
    SITUATION_BUFFER_USAGE_TRANSFER_SRC      = 1 << 5,   
    SITUATION_BUFFER_USAGE_TRANSFER_DST      = 1 << 6,   
    SITUATION_BUFFER_USAGE_DEVICE_ADDRESS    = 1 << 7,   
    SITUATION_BUFFER_USAGE_VERTEX_AND_STORAGE = SITUATION_BUFFER_USAGE_VERTEX_BUFFER | SITUATION_BUFFER_USAGE_STORAGE_BUFFER,
    SITUATION_BUFFER_USAGE_DYNAMIC_VERTEX = SITUATION_BUFFER_USAGE_VERTEX_BUFFER | SITUATION_BUFFER_USAGE_TRANSFER_DST,
    SITUATION_BUFFER_USAGE_DYNAMIC_UNIFORM = SITUATION_BUFFER_USAGE_UNIFORM_BUFFER | SITUATION_BUFFER_USAGE_TRANSFER_DST,
    SITUATION_BUFFER_USAGE_STORAGE_COMPUTE = SITUATION_BUFFER_USAGE_STORAGE_BUFFER | SITUATION_BUFFER_USAGE_TRANSFER_SRC | SITUATION_BUFFER_USAGE_TRANSFER_DST | SITUATION_BUFFER_USAGE_DEVICE_ADDRESS,
} SituationBufferUsageFlags;
typedef enum SituationColorEncoding {
    SITUATION_COLOR_LINEAR = 0,     
    SITUATION_COLOR_SRGB = 1        
} SituationColorEncoding;
typedef struct SituationImage {
    void *data;                                     
    int width;                                      
    int height;                                     
    int channels;                                   
    SituationColorEncoding color_encoding;      
} SituationImage;
typedef struct {
    uint32_t slot_index;
    uint32_t generation;
    size_t size_in_bytes; 
    SituationBufferUsageFlags usage_flags; 
} SituationBuffer;
typedef struct {
    uint32_t slot_index;
    uint32_t generation;
} SituationShader;
typedef struct SituationModelMesh {
    char name[SITUATION_MAX_DEVICE_NAME_LEN]; 
    SituationMesh gpu_mesh;                   
    Vector4 base_color_factor;                
    float metallic_factor;                    
    float roughness_factor;                   
    Vector3 emissive_factor;                  
    SituationTexture base_color_texture;      
    SituationTexture metallic_roughness_texture; 
    SituationTexture normal_texture;          
    SituationTexture occlusion_texture;       
    SituationTexture emissive_texture;        
} SituationModelMesh;
typedef struct SituationModel {
    uint32_t slot_index;
    uint32_t generation;
    int mesh_count;             
    SituationModelMesh* meshes; 
} SituationModel;
typedef struct {
    uint32_t slot_index;
    uint32_t generation;
} SituationSound;
SITAPI void SituationUpdateTimers(void);                                                
SITAPI void SituationUpdate(void);                                                      
SITAPI bool SituationWindowShouldClose(void);                                           
SITAPI void SituationUnloadImage(SituationImage image);                                 
SITAPI void SituationUnloadShader(SituationShader* shader);                             
SITAPI SituationError SituationUpdateBuffer(SituationBuffer buffer, size_t offset, size_t size, const void* data); 
SITAPI void SituationUnloadModel(SituationModel* model);                                
SITAPI void SituationUnloadSound(SituationSound* sound);                                
SITAPI bool SituationWaitForJob(SituationThreadPool* pool, SituationJobId job_id); 							
SITAPI void SituationWaitForAllJobs(SituationThreadPool* pool); 											