sit/situation_api_audio.h

SITAPI SituationError SituationVirtualMidiNoteOnEx(uint8_t channel, uint8_t note, uint8_t velocity); 
SITAPI SituationError SituationVirtualMidiNoteOffEx(uint8_t channel, uint8_t note);                  
SITAPI SituationError SituationVirtualMidiNoteOn(uint8_t note, uint8_t velocity);     
SITAPI SituationError SituationVirtualMidiNoteOff(uint8_t note);                      
SITAPI SituationError SituationVirtualMidiControlChange(uint8_t channel, uint8_t controller, uint8_t value); 
SITAPI SituationError SituationVirtualMidiPitchBend(uint8_t channel, int16_t bend);   
SITAPI SituationError SituationVirtualMidiProgramChange(uint8_t channel, uint8_t program); 