wrappers/python/situation/foreign.py


    if hasattr(dll, 'SituationUnloadImage'):
        dll.SituationUnloadImage.argtypes = [T.SituationImage]
        dll.SituationUnloadImage.restype = None

    if hasattr(dll, 'SituationUnloadModel'):
        dll.SituationUnloadModel.argtypes = [POINTER(T.SituationModel)]
        dll.SituationUnloadModel.restype = None

    if hasattr(dll, 'SituationUnloadShader'):
        dll.SituationUnloadShader.argtypes = [POINTER(T.SituationShader)]
        dll.SituationUnloadShader.restype = None

    if hasattr(dll, 'SituationUnloadSound'):
        dll.SituationUnloadSound.argtypes = [POINTER(T.SituationSound)]
        dll.SituationUnloadSound.restype = None

    if hasattr(dll, 'SituationUpdate'):
        dll.SituationUpdate.argtypes = []
        dll.SituationUpdate.restype = None

    if hasattr(dll, 'SituationUpdateBuffer'):
        dll.SituationUpdateBuffer.argtypes = [T.SituationBuffer, c_size_t, c_size_t, c_void_p]
        dll.SituationUpdateBuffer.restype = c_int

    if hasattr(dll, 'SituationUpdateTimers'):
        dll.SituationUpdateTimers.argtypes = []
        dll.SituationUpdateTimers.restype = None

    if hasattr(dll, 'SituationValidateShaderUniforms'):
        dll.SituationValidateShaderUniforms.argtypes = [T.SituationShader, POINTER(T.SituationUniformExpectation), c_int, c_char_p, c_size_t]
        dll.SituationValidateShaderUniforms.restype = c_int

    if hasattr(dll, 'SituationVirtualMidiControlChange'):
        dll.SituationVirtualMidiControlChange.argtypes = [c_uint8, c_uint8, c_uint8]
        dll.SituationVirtualMidiControlChange.restype = c_int

    if hasattr(dll, 'SituationVirtualMidiNoteOff'):
        dll.SituationVirtualMidiNoteOff.argtypes = [c_uint8]
        dll.SituationVirtualMidiNoteOff.restype = c_int

    if hasattr(dll, 'SituationVirtualMidiNoteOffEx'):
        dll.SituationVirtualMidiNoteOffEx.argtypes = [c_uint8, c_uint8]
        dll.SituationVirtualMidiNoteOffEx.restype = c_int

    if hasattr(dll, 'SituationVirtualMidiNoteOn'):
        dll.SituationVirtualMidiNoteOn.argtypes = [c_uint8, c_uint8]
        dll.SituationVirtualMidiNoteOn.restype = c_int

    if hasattr(dll, 'SituationVirtualMidiNoteOnEx'):
        dll.SituationVirtualMidiNoteOnEx.argtypes = [c_uint8, c_uint8, c_uint8]
        dll.SituationVirtualMidiNoteOnEx.restype = c_int

    if hasattr(dll, 'SituationVirtualMidiPitchBend'):
        dll.SituationVirtualMidiPitchBend.argtypes = [c_uint8, c_int16]
        dll.SituationVirtualMidiPitchBend.restype = c_int

    if hasattr(dll, 'SituationVirtualMidiProgramChange'):
        dll.SituationVirtualMidiProgramChange.argtypes = [c_uint8, c_uint8]
        dll.SituationVirtualMidiProgramChange.restype = c_int

    if hasattr(dll, 'SituationWaitForAllJobs'):
        dll.SituationWaitForAllJobs.argtypes = [c_void_p]
        dll.SituationWaitForAllJobs.restype = None

    if hasattr(dll, 'SituationWaitForJob'):
        dll.SituationWaitForJob.argtypes = [c_void_p, c_uint32]
        dll.SituationWaitForJob.restype = c_int

    if hasattr(dll, 'SituationWindowShouldClose'):
        dll.SituationWindowShouldClose.argtypes = []
        dll.SituationWindowShouldClose.restype = c_bool

    if hasattr(dll, 'SituationYpqAdjustChroma'):
        dll.SituationYpqAdjustChroma.argtypes = [c_void_p, c_float]
        dll.SituationYpqAdjustChroma.restype = c_void_p

    if hasattr(dll, 'SituationYpqAdjustLuma'):
        dll.SituationYpqAdjustLuma.argtypes = [c_void_p, c_float]
        dll.SituationYpqAdjustLuma.restype = c_void_p

    if hasattr(dll, 'SituationYpqAdjustPhase'):
        dll.SituationYpqAdjustPhase.argtypes = [c_void_p, c_int]
        dll.SituationYpqAdjustPhase.restype = c_void_p

    if hasattr(dll, 'SituationYpqAnalyzeRgbMapping'):
        dll.SituationYpqAnalyzeRgbMapping.argtypes = [POINTER(T.SituationYpqRgbMappingStats)]
        dll.SituationYpqAnalyzeRgbMapping.restype = c_int

    if hasattr(dll, 'SituationYpqClampInGamut'):
        dll.SituationYpqClampInGamut.argtypes = [c_void_p]
        dll.SituationYpqClampInGamut.restype = c_void_p

    if hasattr(dll, 'SituationYpqDistance'):
        dll.SituationYpqDistance.argtypes = [c_void_p, c_void_p]
        dll.SituationYpqDistance.restype = c_float

    if hasattr(dll, 'SituationYpqEquals'):
        dll.SituationYpqEquals.argtypes = [c_void_p, c_void_p, c_ubyte]
        dll.SituationYpqEquals.restype = c_bool

    if hasattr(dll, 'SituationYpqGetChroma'):
        dll.SituationYpqGetChroma.argtypes = [c_void_p]
        dll.SituationYpqGetChroma.restype = c_float

    if hasattr(dll, 'SituationYpqGetHueDegrees'):
        dll.SituationYpqGetHueDegrees.argtypes = [c_void_p]
        dll.SituationYpqGetHueDegrees.restype = c_float

    if hasattr(dll, 'SituationYpqGetLuma'):
        dll.SituationYpqGetLuma.argtypes = [c_void_p]
        dll.SituationYpqGetLuma.restype = c_float

    if hasattr(dll, 'SituationYpqLerp'):
        dll.SituationYpqLerp.argtypes = [c_void_p, c_void_p, c_float]
        dll.SituationYpqLerp.restype = c_void_p

    if hasattr(dll, 'SituationYpqQuantize'):
        dll.SituationYpqQuantize.argtypes = [c_void_p]
        dll.SituationYpqQuantize.restype = c_void_p

    if hasattr(dll, 'SituationYpqSliceDuplicateCount'):
        dll.SituationYpqSliceDuplicateCount.argtypes = [c_char, c_int, POINTER(c_int)]
        dll.SituationYpqSliceDuplicateCount.restype = c_int

    if hasattr(dll, 'SituationYpqToRgb10Packed'):
        dll.SituationYpqToRgb10Packed.argtypes = [c_void_p]
        dll.SituationYpqToRgb10Packed.restype = c_uint32

    if hasattr(dll, 'SituationYpqToRgb10PackedHdr'):
        dll.SituationYpqToRgb10PackedHdr.argtypes = [c_void_p]
        dll.SituationYpqToRgb10PackedHdr.restype = c_uint32

    if hasattr(dll, 'SituationYpqToRgba10'):
        dll.SituationYpqToRgba10.argtypes = [c_void_p]
        dll.SituationYpqToRgba10.restype = c_void_p
